--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:visibility="invisible"/>
 
 </RelativeLayout>
