--- a/app/src/main/res/layout/mutual_layout.xml
+++ b/app/src/main/res/layout/mutual_layout.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:text="@string/instructions" />
 
-    <Button
+    <Button android:id="@+id/btn_tell_joke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/instructions_text_view"
